# sysak

./: .aone.yml  .gitignore  Makefile  README.md  README.md.origin  SUMMARY.md  build.sh  configure  configure.origin  querysubtools.sh
doc/: develop.txt  fcachetop.txt  iofsstat.txt  iosdiag.txt  mservice.txt
doc/api/: blackbox.txt
docs/: 工具集.md  跑起来.md
docs/工具集/: appscan.md  bpf_test.md  btf.md  c_test.md  cc_test.md  cgtool.md  confcheck.md  cpu_flamegraph.md  cpuirq.md  fcachetop.md  go_test.md  iofsstat.md  (+29 more)
rpm/: sysak-build.sh  sysak.spec
rpmbuild/: rpmbuild.sh
source/: sysak  sysak.c
source/tools/detect/net_diag/rtrace/rtrace-delay/: Cargo.toml  README.md
source/tools/detect/net_diag/rtrace/rtrace-delay/src/: gen.rs  main.rs  mid.rs  syn.rs
source/tools/detect/net_diag/rtrace/rtrace-drop/: Cargo.toml  README.md
source/tools/detect/net_diag/rtrace/rtrace-drop/src/: base.rs  main.rs
source/tools/detect/net_diag/rtrace/rtrace-drop/src/l1/: mod.rs
source/tools/detect/net_diag/rtrace/rtrace-drop/src/l2/: mod.rs
source/tools/detect/net_diag/rtrace/rtrace-drop/src/l3/: conntrack.rs  fib.rs  iptables.rs  mod.rs
source/tools/detect/net_diag/rtrace/rtrace-drop/src/l4/: mod.rs  tcp.rs  udp.rs
source/tools/detect/net_diag/rtrace/rtrace-drop/src/monitor/: mod.rs  netlink.rs  proc.rs
source/tools/detect/net_diag/rtrace/rtrace-parser/: Cargo.toml  README.md
source/tools/detect/net_diag/rtrace/rtrace-parser/src/: func.rs  ksyms.rs  lib.rs  net.rs  perf.rs  skb.rs  sock.rs  utils.rs
source/tools/detect/net_diag/rtrace/rtrace-rs/: Cargo.toml  README.md  build.rs
source/tools/detect/net_diag/rtrace/rtrace-rs/src/: bindings.rs  lib.rs  rtrace.rs
source/tools/detect/net_diag/rtrace/rtrace-rs/src/builtin/: builtin.rs
source/tools/detect/net_diag/rtrace/rtrace-rs/src/dynamic/: dynamic.rs  mod.rs  offset.rs  parser.rs
source/tools/detect/net_diag/rtrace/rtrace-rs/src/filter/: filter.rs
source/tools/detect/net_diag/rtrace/rtrace-rs/src/trace/: mod.rs  prog.rs  trace.rs
source/tools/detect/net_diag/rtrace/rtrace-rs/src/utils/: gdb.rs  mod.rs
zipbuild/: zipbuild.sh
(+586 files in other folders)
