[package]
name = "rtrace-drop"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
structopt = "0.3"
rtrace-rs = { version = "0.1.0", path = "../rtrace-rs"}
rtrace-parser = { version = "0.1.0", path = "../rtrace-parser"}
crossbeam-channel = "0.5"
once_cell = "1.8.0"
sysctl = "0.4.3"
log = "0.4.14"
uname = "0.1.1"
cached = "0.23.0"
dyn-clone = "1.0.4"
env_logger = "0.9.0"
netlink-packet-route = "0.10.0"
netlink-sys = "0.8.1"