[package]
name = "rtrace-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libbpf-sys = { git = "https://github.com/chengshuyi/libbpf-sys" }
anyhow = "1.0"
serde = "1.0"
serde_derive = "1.0.32"
toml = "0.5"
gdb = "0.1.0"
regex = "1"
once_cell = "1.8.0"
tree-sitter = "0.20.3"
tree-sitter-c = "0.20.1"
log = "0.4.14"
